--- a/lang/locales/zh-CN.json
+++ b/lang/locales/zh-CN.json
@@ -3,8 +3,8 @@
   "site": {
     "loading": "站点状态加载中",
     "unknown": "站点状态未知",
-    "normal": "站点运行正常",
-    "error": "全部站点出现异常",
+    "normal": "所有站点正常运行",
+    "error": "所有站点出现异常",
     "warn": "部分站点出现异常"
   },
   "nav": {
